welcome.lessons.welcome.array.has271.Has271.scala.error
has271:6: error: type mismatch;
 found   : Int(0)
 required: Boolean
    case 2 => 0
              ^has271:8: error: not found: value array667
    case _ => array667(copieTableauSaufUn(nums))
              ^